<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CancionesPlaylist">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

            <TextView
                android:id="@+id/tv_CancionesPlaylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:gravity="center|center_horizontal"
                android:text="@string/tv_CancionesPlaylist"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/fotoEnListaCancionesPlaylist"
                android:layout_width="402dp"
                android:layout_height="131dp" />

            <Button
                android:id="@+id/bt_SacarFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick_SacarFoto"
                android:text="@string/bt_SacarFoto" />

            <Button
                android:id="@+id/bt_ElegirGaleria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick_ElegirGaleria"
                android:text="@string/bt_ElegirDeGaleria" />

            <ListView
                android:id="@+id/listaCancionesPlaylist"
                android:layout_width="402dp"
                android:layout_height="770dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="121dp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>