<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PagPrincipal">

    <ImageView
        android:id="@+id/logo_TuneSongPlayer2"
        android:layout_width="99dp"
        android:layout_height="91dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotunesongplayer" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="72dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:onClick="instrucciones_onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <EditText
        android:id="@+id/et_BuscaUnaCancion"
        android:layout_width="309dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/BuscaUnaCancion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_TuneSongPlayer2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="67dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:onClick="lupa_onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="?android:attr/actionModeWebSearchDrawable" />

    <LinearLayout
        android:id="@+id/linearLayoutPagPrincipal"
        android:layout_width="374dp"
        android:layout_height="313dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_BuscaUnaCancion">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_BuscaUnaCancion">

            <Button
                android:id="@+id/bt_AñadirPlaylist"
                android:layout_width="205dp"
                android:layout_height="50dp"
                android:text="@string/bt_AñadirPlaylist" />

            <Button
                android:id="@+id/bt_EliminarPlaylist"
                android:layout_width="205dp"
                android:layout_height="50dp"
                android:text="@string/bt_EliminarPlaylist" />


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="6500dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_TusPlaylists"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center|center_horizontal"
                    android:text="@string/tv_TusPlaylists"
                    android:textColor="#FFFFFF"
                    android:textSize="8pt"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/listViewPlaylists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="69dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="70dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="5dp"
        android:onClick="informacion_onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPagPrincipal"
        app:layout_constraintVertical_bias="0.83"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="88dp"
        android:layout_height="73dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPagPrincipal"
        app:layout_constraintVertical_bias="0.85"
        app:srcCompat="@drawable/notamusical" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="87dp"
        android:layout_height="71dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="20dp"
        android:onClick="perfilUsuario_onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPagPrincipal"
        app:layout_constraintVertical_bias="0.90999997"
        app:srcCompat="@drawable/imagenusuario" />


</androidx.constraintlayout.widget.ConstraintLayout>